add route end point "/server/service/:uuid/result" - request service data with result
