# pkg/server/route/route.go
@@ -63,6 +63,7 @@ func New(cfg *config.Config, db *database.DBManipulator) *Route {
 	//route /server/service*
 	router.e.GET("/server/service", controller.FindService())
 	router.e.GET("/server/service/:uuid", controller.GetService())
+	router.e.GET("/server/service/:uuid/result", controller.GetServiceResult())
 	router.e.POST("/server/service", controller.CreateService())
 	router.e.PUT("/server/service/:uuid", controller.UpdateService())
 	router.e.DELETE("/server/service/:uuid", controller.DeleteService())
